--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# Configurazione Debug in console
+debug=true
+
+# Configurazione DataBase - datasource
+
 spring.mvc.view.prefix =/
 spring.jmx.default-domain: test
 server.contextPath=/user-portal
@@ -13,3 +18,8 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8082
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+# Configurazione Thymeleaf 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
