--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,14 @@
-# Configurazione Debug in console
-debug=true
-
-# Configurazione DataBase - datasource
-
-spring.mvc.view.prefix =/
-spring.jmx.default-domain: test
-server.contextPath=/user-portal
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ristoranteSpring_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+# Database connection properties
+spring.datasource.url=jdbc:mysql://localhost:3306/ristoranteSpring_db
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.platform=mysql
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=update
-server.port=8082
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-# Configurazione Thymeleaf 
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
+server.port=8082
